# ivyManageSystem-backend

./: .env.example  .gitignore  .grandfather-no-response-model  AGENTS.md  CLAUDE.md  README.md  RELEASE_NOTES.md  SECURITY_AUDIT.md  activity_fee_security_report.md  add_columns.py  add_indexes.py  add_job_title_fk.py  alembic.ini  init_holidays.py  main.py  pyproject.toml  renovate.json  requirements.txt  reset_employees.py  security_best_practices_report.md  setup_db.py  update_classroom_teachers.py  update_positions.py  update_schema_job_titles.py  zbpack.json
.github/: dependabot.yml
.playwright-mcp/: page-2026-04-29T06-42-51-555Z.yml  page-2026-04-29T06-45-50-555Z.yml  page-2026-04-29T07-18-46-305Z.yml
.scratch/: insurance_calculate_zero_salary_patch.md  salary_finalize_body.txt
alembic/: env.py
api/: academic_terms.py  activity.py  analytics.py  announcements.py  approval_settings.py  approvals.py  art_teacher_payroll.py  attachments.py  attendance.py  audit.py  auth.py  bonus_preview.py  calendar_admin.py  classrooms.py  config.py  contact_book_ws.py  data_quality.py  dev.py  disciplinary.py  dismissal_calls.py  dismissal_ws.py  dsr_admin.py  employee_allowances.py  employees.py  employees_docs.py  events.py  exports.py  fees.py  gov_data_sync.py  gov_reports.py  guardians_admin.py  health.py  inbox_ws.py  insurance.py  integrations_health.py  internal_metrics.py  leave_quota_expiry.py  leaves.py  leaves_quota.py  leaves_workday.py  (+30 more)
config/: __init__.py  base.py  cache.py  consent.py  core.py  geocoding.py  line.py  medical.py  misc.py  network.py  ops.py  ops_alert.py  parent_db.py  recruitment.py  scheduler.py  sentry.py  storage.py  validators.py
data/: employees_list.txt  employees_list_filtered.txt  parent_faq.json
docs/: jwt_secret_rotation.md  parent_rls_env_vars.md
e2e/: .gitignore  README.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json
evals/: README.md  cli.py
middleware/: body_size_limit.py  csrf_origin.py  ws_origin.py  (+1 more)
(+2330 files in other folders)
